Adjust after rebase